# caritas-love

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  compose.yaml
.github/workflows/: ci.yml
.sqlx/: query-9bfd9c1bab67eedbc6807a5516241f1ed1f50998e8c1e22bd554c6c024a23151.json
doc/: SITEMAP.md
locales/en-US/: admin.ftl  auth.ftl  common.ftl  hello.ftl  login.ftl
locales/es-US/: admin.ftl  auth.ftl  common.ftl  hello.ftl  login.ftl
migrations/: 20260324220000_base_schema.sql
sql/init/: 001-schema.sql  002-data.sql
src/: app_env.rs  auth.rs  demo_mode.rs  filters.rs  i18n.rs  lang.rs  lib.rs  logging.rs  main.rs  template.rs  web.rs
src/lang/: dev.rs  prod.rs
src/web/: admin.rs  auth.rs  hello.rs  login.rs  preferences.rs  request_ip.rs  root.rs
static/: site.css
template-check-derive/: Cargo.toml
template-check-derive/src/: lib.rs
templates/: admin_dashboard.html  admin_login.html  admin_password_reset.html  base.html  hello.html  login.html  login_options.html
tests/: auth_flow.rs  common.rs  fluent_keys.rs  template_fluent_keys.rs
tools/ci/: lint
tools/docker/: bootstrap-db  build  postgres-shell
