[package]
name = "caritas-love"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
dotenvy = "0.15.7"
fluent = "0.17.0"
once_cell = "1.21.4"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
unic-langid = { version = "0.9.6", features = ["macros"] }

[dev-dependencies]
fluent-syntax = "0.12.0"
